# sluice-pipeline

./: .dockerignore  .gitignore  CHANGELOG.md  Makefile  README.md  README_ZH.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  publish.yml
configs/: providers.toml.example  sluice.toml.example
configs/pipelines/: ai_news.toml.example
docs/superpowers/plans/: 2026-04-28-sluice-implementation.md  2026-04-29-sluice-review-fixes.md  2026-04-29-sluice-v1.1-implementation.md  2026-05-01-crawl4ai-fetcher.md  2026-05-01-llm-middleware.md  2026-05-01-new-stages.md
docs/superpowers/specs/: 2026-04-28-sluice-design.md  2026-04-29-sluice-v1.1-design.md  2026-05-01-crawl4ai-fetcher-design.md  2026-05-01-llm-middleware-design.md  2026-05-01-new-stages-design.md
prompts/: daily.md.j2  daily_brief_zh.md  email.css  email_item.md.j2  email_wrapper.html.j2  feishu_card.default.json.j2  feishu_item.md.j2  score_tag.md  summarize_score_tag.md  summarize_zh.md  telegram_item.md.j2
scripts/docker/: .env.example  Dockerfile  docker-compose.prefect.yml  docker-compose.yml
sluice/: __init__.py  builders.py  cli.py  config.py  context.py  flow.py  gc.py  gc_flow.py  loader.py  logging_setup.py  metrics.py  pricing.py  registry.py  run_key.py  runner.py  url_canon.py  window.py
sluice/core/: dotpath.py  errors.py  item.py  protocols.py
sluice/enrichers/: __init__.py  hn_comments.py  hn_parser.py
sluice/fetchers/: _ssrf.py  _utils.py  base.py  chain.py  crawl4ai.py  firecrawl.py  jina_reader.py  trafilatura_fetcher.py
sluice/llm/: budget.py  client.py  json_output.py  middleware.py  pool.py  provider.py  tokens.py
sluice/processors/: __init__.py  base.py  cross_dedupe.py  dedupe.py  enrich.py  fetcher_apply.py  field_filter.py  filter.py  html_strip.py  limit.py  llm_stage.py  mirror_attachments.py  render.py  score_tag.py  sort.py  summarize_score_tag.py
sluice/sinks/: __init__.py  _email_render.py  _feishu_bot.py  _feishu_post_render.py  _feishu_render.py  _markdown_ast.py  _push_base.py  _telegram_render.py  base.py  email.py  feishu.py  file_md.py  notion.py  telegram.py
sluice/sources/: _filter.py  base.py  rss.py
sluice/state/: attachment_store.py  attachments.py  cache.py  db.py  delivery_log.py  emissions.py  failures.py  run_log.py  seen.py
sluice/state/migrations/: 0001_init.sql  0002_v1_1.sql
templates/: daily.md.j2
tests/: conftest.py  test_builders.py  test_builders_long_context.py  test_ci_cd_config.py  test_cli.py  test_cli_deliveries.py  test_cli_deploy.py  test_cli_deploy_gc.py  test_config_long_context.py  test_context.py  test_example_configs.py  test_flow.py  test_gc.py  test_global_config_gc.py  test_lazy_registry.py  test_logging_setup.py  test_metrics.py  test_pyproject_extras.py  test_registry.py  test_run_key.py  test_runner.py  test_url_canon.py  test_window.py  test_window_lookback_v1_1.py  test_window_parse_duration_ms.py
tests/config/: test_loader.py  test_model_entry.py  test_pipeline_config.py  test_provider_config.py
tests/core/: test_attachment_v1_1.py  test_dotpath.py  test_enricher_protocol.py  test_errors.py  test_item.py
tests/enrichers/: test_hn_comments.py
tests/fetchers/: test_chain.py  test_crawl4ai.py  test_firecrawl.py  test_jina.py  test_trafilatura.py
tests/fixtures/hn/: sample_thread.html
tests/integration/: test_smoke.py
tests/llm/: test_client.py  test_middleware.py  test_pool.py  test_provider.py  test_tokens.py
tests/loader/: test_email_attachment_guard.py
tests/processors/: test_cross_dedupe.py  test_dedupe.py  test_enrich.py  test_fetcher_apply.py  test_fetcher_apply_use_raw_summary.py  test_field_filter.py  test_field_filter_v1_1.py  test_filter.py  test_html_strip.py  test_limit.py  test_llm_stage.py  test_mirror_attachments.py  test_render.py  test_score_tag.py  test_sort.py  test_summarize_score_tag.py
tests/sinks/: test_base.py  test_email.py  test_feishu.py  test_file_md.py  test_markdown_ast.py  test_notion.py  test_push_base.py  test_telegram.py
tests/sources/: test_rss.py
tests/sources/fixtures/: example.xml
tests/state/: test_attachment_store.py  test_cache.py  test_cache_size_cap.py  test_db.py  test_db_migration_v2.py  test_delivery_log.py  test_emissions.py  test_failures.py  test_format_url.py  test_run_log.py  test_seen.py
