[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sluice-pipeline"
version = "0.2.4"
description = "Code-native, configurable RSS-to-Notion pipeline"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["rss", "pipeline", "notion", "automation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "pydantic>=2.6",
  "aiosqlite>=0.20",
  "httpx>=0.27",
  "feedparser>=6.0",
  "trafilatura>=1.12",
  "jinja2>=3.1",
  "typer>=0.12",
  "prefect>=3.0",
  "python-dateutil>=2.9",
  "regex>=2024.0",
  "notionify>=0.1.3",
  "fake-useragent>=2.2",
  "rich>=13.0",
  "tqdm>=4.66",
  "loguru>=0.7",
  "aiofiles>=23.0",
  "croniter>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=5",
       "respx>=0.21", "freezegun>=1.5", "ruff>=0.5", "ty>=0.0.27",
       "aiosmtpd>=1.4"]
channels = ["markdown-it-py>=3.0"]
telegram = ["markdown-it-py>=3.0"]
feishu   = ["markdown-it-py>=3.0"]
email    = ["markdown-it-py>=3.0", "aiosmtplib>=3.0", "lxml-html-clean>=0.1"]
metrics  = ["prometheus_client>=0.20"]
enrich-hn = ["beautifulsoup4>=4.12"]
all = [
  "markdown-it-py>=3.0",
  "aiosmtplib>=3.0",
  "lxml-html-clean>=0.1",
  "prometheus_client>=0.20",
  "beautifulsoup4>=4.12",
]

[project.urls]
Homepage = "https://github.com/nerdneilsfield/sluice-pipeline"
Repository = "https://github.com/nerdneilsfield/sluice-pipeline"

[project.scripts]
sluice = "sluice.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["sluice"]

[tool.hatch.build.targets.sdist]
include = [
  "/CHANGELOG.md",
  "/LICENSE",
  "/README.md",
  "/README_ZH.md",
  "/configs/**/*.example",
  "/prompts",
  "/pyproject.toml",
  "/sluice",
  "/templates",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --cov=sluice --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F811"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
all = "warn"

[tool.ty.src]
include = ["sluice"]

[tool.ty.terminal]
output-format = "concise"

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
all = "warn"

[tool.coverage.run]
source = ["sluice"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
